List style + div

--- a/map.html
+++ b/map.html
@@ -29,7 +29,7 @@
           <p class="bold">Current UTC time: <span id="time"></span></p>
           <p id="day-today"></p>
         </div>
-        <div>
+        <div id="people">
           <ul id="people-name">
               <template id="people-list">    
                   <li>{{name}}</li>                            
