--- a/map.html
+++ b/map.html
@@ -9,8 +9,10 @@
         "AIzaSyB41DRUbKWJHPxaFjMAwdrzWzbVKartNGg";
     </script>
     <!-- playground-hide-end -->
-
-    <link rel="stylesheet" type="text/css" href="map.css" />      
+    
+    <!-- <script src="https://cdn.jsdelivr.net/npm/less" ></script> 
+    <link rel="stylesheet/less" type="text/css" href="mapstyle.less"/> -->
+    <link rel="stylesheet" type="text/css" href="mapstyle.css"/>      
   </head>
   <body>
     <div id="wrap">
