--- a/map.html
+++ b/map.html
@@ -10,8 +10,8 @@
     </script>
     <!-- playground-hide-end -->
     
-    <!-- <script src="https://cdn.jsdelivr.net/npm/less" ></script> 
-    <link rel="stylesheet/less" type="text/css" href="mapstyle.less"/> -->
+    <script src="https://cdn.jsdelivr.net/npm/less" ></script> 
+    <link rel="stylesheet/less" type="text/css" href="mapstyle.less"/>
     <link rel="stylesheet" type="text/css" href="mapstyle.css"/>      
   </head>
   <body>
@@ -52,8 +52,8 @@
      with https://www.npmjs.com/package/@googlemaps/js-api-loader.
     -->
     <script
-      src="https://maps.googleapis.com/maps/api/js?key=AIzaSyB41DRUbKWJHPxaFjMAwdrzWzbVKartNGg&callback=initMap&v=weekly"
-      defer
+      src="https://maps.googleapis.com/maps/api/js?key=AIzaSyB41DRUbKWJHPxaFjMAwdrzWzbVKartNGg"
+      
     ></script>
     <script src="mustache.min.js"></script>
     <script src="map.js"></script>    
